--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,24 +34,28 @@ topic:
       id: pp-sykt-barn-listener
       navn: privat-pleiepengesoknad-cleanup
       bryter: true
+      dry-run: false
 
     # topic.listener.omp-utbetaling-arbeidstaker
     omp-utbetaling-arbeidstaker:
       id: omp-utbetaling-arbeidstaker-listener
       navn: privat-omp-utbetalingsoknad-arbeidstaker-cleanup
       bryter: true
+      dry-run: false
 
     # topic.listener.omp-utbetaling-snf
     omp-utbetaling-snf:
       id: omp-utbetaling-snf-listener
       navn: privat-omsorgspengerutbetalingsoknad-cleanup
       bryter: true
+      dry-run: false
 
     # topic.listener.omp-utvidet-rett
     omp-utvidet-rett:
       id: omp-utvidet-rett-listener
       navn: privat-omsorgspengesoknad-cleanup
       bryter: true
+      dry-run: false
 
 management:
   endpoints:
