Henter ut loginservice discoveryUrl fra configmap.
Da loginservice migrer til ny issuer, benytter man denne configmapen til å kunne migrere dens verdi senere.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,7 +85,7 @@ services:
     depends_on:
       - oidc-provider
     environment:
-      REDIRECT_URL: "http://localhost:8080"
+      REDIRECT_URL: "http://localhost:8080/soknad"
       AUTO_REDIRECT_TO_FRONTEND: "true"
 
   oidc-provider:
