--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -11,7 +11,7 @@ no.nav:
   security:
     jwt:
       issuer:
-        selvbetjening:
+        loginservice:
           discoveryUrl: http://metadata
           accepted_audience: aud-localhost
           cookie_name: localhost-idtoken
