Deaktiverer dry-run og dermed lanserer innsyn for pp-sykt-barn.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -3,7 +3,7 @@ topic:
   listener:
     pp-sykt-barn:
       bryter: true
-      dry-run: true
+      dry-run: false
     omp-utbetaling-arbeidstaker:
       bryter: false
     omp-utbetaling-snf:
