Enabler auto-commit
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -100,7 +100,7 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
     consumer:
-      enable-auto-commit: false
+      enable-auto-commit: true
       group-id: ${spring.application.name}
       auto-offset-reset: latest
       retry-interval: 60_000 # Egendefinert property
