Konfigurer transactionmanagement med rollback.
Bed feil vil transaction bli rullet tilbake og man ungår duplisering av data i database og commit til ny topic som brukernotifikasjon

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -99,13 +99,13 @@ spring:
       client-id: ${spring.application.name}
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
-      transaction-id-prefix: tx
+      transaction-id-prefix: tx.
     consumer:
-      enable-auto-commit: true
+      enable-auto-commit: false
       group-id: ${spring.application.name}
       auto-offset-reset: latest
       isolation-level: read_committed
-      retry-interval: 10_000 # Egendefinert property
+      retry-interval: 60_000 # Egendefinert property
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       ssl:
