Fikser retry-mekanisme (#4)
* Konfigurer transactionmanagement med rollback.

Ved feil vil transaction bli rullet tilbake og man ungår duplisering av data i database og commit til ny topic som brukernotifikasjon

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Tvinger fram derserialiserinsfeil for test i dev-gcp.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Fikser navn på alert.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Fikser alerts

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Fikser deserialiseringsfeil.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Legger til topic for dittnv varsel i dc.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/nais/alerterator.yml
+++ b/nais/alerterator.yml
@@ -48,12 +48,12 @@ spec:
                     Sjekk loggene for å se hvorfor dette feiler"
       action: "`kubectl logs \{{ $labels.kubernetes_pod_name }} -n \{{ $labels.kubernetes_namespace }} -c \{{ $labels.app }}`"
 
-    - alert: "\{{ $labels.name }} feiler i \{{ $labels.app }}."
+    - alert: Konsumering av meldinger feiler
       severity: danger
-      expr: floor(increase(spring_kafka_listener_seconds_count{result="failure", app="{{app}}"}[3m])) > 0
+      expr: ceil(increase(spring_kafka_listener_seconds_count{result="failure", app="{{app}}"}[3m])) > 0
       for: 1m
       description: "Konsumering av melding i \{{ $labels.name }} feiler. Sjekk loggene for å finne ut hvorfor dette feiler."
-      action: "`kubectl logs \{{ $labels.kubernetes_pod_name }} -n \{{ $labels.kubernetes_namespace }} -c \{{ $labels.app }}`"
+      action: "`kubectl logs \{{ $labels.pod_name }} -n \{{ $labels.namespace }} -c \{{ $labels.app }}`"
 
     - alert: Helsesjekk feiler
       expr: floor(increase(http_server_requests_seconds_count{status!~"200", uri="/actuator/health", app="{{app}}"}[3m])) > 0
