--- a/docker-compose-env/sif-innsyn-api.env
+++ b/docker-compose-env/sif-innsyn-api.env
@@ -1,6 +1,7 @@
 SERVER_PORT=8080
 SPRING_PROFILES_ACTIVE=dev-gcp
 SPRING_APPLICATION_NAME=sif-innsyn-api-dc
+SPRING_KAFKA_PRODUCER_BOOTSTRAP_SERVERS=kafka:9093
 SPRING_KAFKA_CONSUMER_BOOTSTRAP_SERVERS=kafka:9093
 SPRING_KAFKA_PROPERTIES_SECURITY_PROTOCOL=SASL_PLAINTEXT
 
