Legger til metric for måling av antall unike søkere i databasen.
Schedulerer jobb for å hente antall unike søkere og publisere metric på det.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,11 @@ no.nav:
         loginservice:
           cookie_name: # Settes inais/<cluster>.json
 
+  metrics:
+    interval:
+      antall_brukere: 60_000
+      antall_søknader: 60_000
+
 topic:
   # Bryter betegner av/på funksjon for kafkalytter. True (på), False (av).
   listener:
