--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -45,7 +45,12 @@ spring:
         hibernate:
           ddl-auto: none
 
-no.nav.security.jwt.issuer:
-  loginservice:
-    discoveryUrl: ${LOGINSERVICE_IDPORTEN_DISCOVERY_URL} # settes av configmap: loginservice-idporten i naiserator.yml
-    accepted_audience: ${LOGINSERVICE_IDPORTEN_AUDIENCE} # settes av configmap: loginservice-idporten i naiserator.yml
+no.nav:
+  security.jwt.issuer:
+    loginservice:
+      discoveryUrl: ${LOGINSERVICE_IDPORTEN_DISCOVERY_URL} # settes av configmap: loginservice-idporten i naiserator.yml
+      accepted_audience: ${LOGINSERVICE_IDPORTEN_AUDIENCE} # settes av configmap: loginservice-idporten i naiserator.yml
+  metrics:
+    interval:
+      antall_brukere: 3_600_000 # 1 time
+      antall_søknader: 3_600_000
