--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,9 +26,7 @@ no.nav:
           cookie_name: # Settes inais/<cluster>.json
 
   metrics:
-    interval:
-      antall_brukere: 60_000
-      antall_søknader: 60_000
+    interval: 60_000
 
 topic:
   # Bryter betegner av/på funksjon for kafkalytter. True (på), False (av).
