--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -19,9 +19,7 @@ no.nav:
       allowed-origins: http://localhost:8080
 
   metrics:
-    interval:
-      antall_brukere: 5
-      antall_søknader: 5
+    interval: 5
 
 spring:
   profiles:
