Legger til custom metrics for måling av antall søknader og søkere. (#6)
* Legger til metric for måling av antall unike søkere i databasen.

Schedulerer jobb for å hente antall unike søkere og publisere metric på det.

* Legger til metric for måling av antall søknader i databasen.

* Legger til måling av antall pleiepengesøknader.

* Setter scheduleringsjobb for metrics til hver time i prod.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -45,7 +45,10 @@ spring:
         hibernate:
           ddl-auto: none
 
-no.nav.security.jwt.issuer:
-  loginservice:
-    discoveryUrl: ${LOGINSERVICE_IDPORTEN_DISCOVERY_URL} # settes av configmap: loginservice-idporten i naiserator.yml
-    accepted_audience: ${LOGINSERVICE_IDPORTEN_AUDIENCE} # settes av configmap: loginservice-idporten i naiserator.yml
+no.nav:
+  security.jwt.issuer:
+    loginservice:
+      discoveryUrl: ${LOGINSERVICE_IDPORTEN_DISCOVERY_URL} # settes av configmap: loginservice-idporten i naiserator.yml
+      accepted_audience: ${LOGINSERVICE_IDPORTEN_AUDIENCE} # settes av configmap: loginservice-idporten i naiserator.yml
+  metrics:
+    interval: 3_600_000 # 1 time
