Disabler konsumering av pp-sykt barn i prod.
Dette er for å forhindre at flere dittnav beskjeder blir sendt ut med feil lenke.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -2,7 +2,7 @@ topic:
   # Bryter betegner av/på funksjon for kafkalytter. True (på), False (av).
   listener:
     pp-sykt-barn:
-      bryter: true
+      bryter: false
       dry-run: false
     omp-utbetaling-arbeidstaker:
       bryter: false
