Lager hotfix for å sende ut dittnav beskjeder ut med riktig info. Reduserer max antall pod til 1, slik at ikke 2 poder ufører samme operasjon.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -54,7 +54,7 @@ no.nav:
   dittnav:
     pleiepenger-sykt-barn:
       beskjed:
-        tekst: 'Vi har mottatt søknaden din om pleiepenger.'
+        tekst: 'Vi beklager at vi sendte feil lenke i forrige melding om mottatt pleiepengesøknad. Her får du riktig lenke:'
         link: https://sif-innsyn.nav.no/familie/sykdom-i-familien/soknad/innsyn/dine-pleiepenger
         dagerSynlig: 7
 
