HOTFIX - Del 1: Lese søknader fra database og sende ut dittnav beskjed med riktig info. (#8)
* Fikser lenke i dittnav beskjed for pleiepenger.

* Lager hotfix for å sende ut dittnav beskjeder ut med riktig info.
Reduserer max antall pod til 1, slik at ikke 2 poder ufører samme operasjon.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -50,5 +50,13 @@ no.nav:
     loginservice:
       discoveryUrl: ${LOGINSERVICE_IDPORTEN_DISCOVERY_URL} # settes av configmap: loginservice-idporten i naiserator.yml
       accepted_audience: ${LOGINSERVICE_IDPORTEN_AUDIENCE} # settes av configmap: loginservice-idporten i naiserator.yml
+
+  dittnav:
+    pleiepenger-sykt-barn:
+      beskjed:
+        tekst: 'Vi beklager at vi sendte feil lenke i forrige melding om mottatt pleiepengesøknad. Her får du riktig lenke:'
+        link: https://sif-innsyn.nav.no/familie/sykdom-i-familien/soknad/innsyn/dine-pleiepenger
+        dagerSynlig: 7
+
   metrics:
     interval: 3_600_000 # 1 time
