Midlertidig diabler konsumering av omsorgsdager-overføring løsning
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -76,7 +76,7 @@ topic:
     omd-overforing-losning:
       id: omd-overforing-losning-listener
       navn: k9-rapid-v2
-      bryter: true
+      bryter: false
       dry-run: false
 
 management:
