Sender ut dittnav meldinger på nytt.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -54,6 +54,7 @@ no.nav:
   dittnav:
     pleiepenger-sykt-barn:
       beskjed:
+        tekst: 'Vi beklager at vi sendte feil lenke i forrige melding om mottatt pleiepengesøknad. Her får du riktig lenke:'
         link: https://www.nav.no/familie/sykdom-i-familien/soknad/innsyn/dine-pleiepenger
 
   metrics:
