--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -76,7 +76,7 @@ topic:
     omd-overforing-losning:
       id: omd-overforing-losning-listener
       navn: k9-rapid-v2
-      bryter: false
+      bryter: true
       dry-run: false
 
 management:
