Kjører custom metric scheduler hver 30 min.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,7 +32,7 @@ no.nav:
           cookie_name: # Settes inais/<cluster>.json
 
   metrics:
-    interval: 60_000
+    interval: 1_800_000
 
 topic:
   # Bryter betegner av/på funksjon for kafkalytter. True (på), False (av).
