Refaktorer ut sif-innsyn base url som miljøvariabel.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/docker-compose-env/sif-innsyn-api.env
+++ b/docker-compose-env/sif-innsyn-api.env
@@ -5,6 +5,8 @@ SPRING_KAFKA_PRODUCER_BOOTSTRAP_SERVERS=kafka:9093
 SPRING_KAFKA_CONSUMER_BOOTSTRAP_SERVERS=kafka:9093
 SPRING_KAFKA_PROPERTIES_SECURITY_PROTOCOL=SASL_PLAINTEXT
 
+SIF_INNSYN_BASE_URL: https://sif-innsyn.dev.nav.no/familie/sykdom-i-familien/soknad/innsyn
+
 APIGW_API_KEY=x-nav-apiKey
 STS_APIKEY=x-nav-apiKey
 STS_USERNAME=igroup
