Disabler flyway migration.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -86,7 +86,7 @@ spring:
     driver-class-name: org.postgresql.Driver
     flyway:
       baselineOnMigrate: true
-      enabled: true
+      enabled: false
       clean-on-validation-error: true
     jpa:
       show-sql: true
