--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -39,11 +39,12 @@ spring:
         trust-store-location: file:${javax.net.ssl.trustStore}
         trust-store-password: ${javax.net.ssl.trustStorePassword}
 
-    datasource:
-      jpa:
-        show-sql: false
-        hibernate:
-          ddl-auto: none
+  flyway:
+    url: jdbc:postgresql://${NAIS_DATABASE_SIF_INNSYN_API_SIF_INNSYN_DB_HOST}:${NAIS_DATABASE_SIF_INNSYN_API_SIF_INNSYN_DB_PORT}/${NAIS_DATABASE_SIF_INNSYN_API_SIF_INNSYN_DB_DATABASE}?ssl=true
+  jpa:
+    show-sql: false
+    hibernate:
+      ddl-auto: none
 
 no.nav:
   security.jwt.issuer:
