--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -76,6 +76,17 @@ spring:
       maxDelay: 4000
       maxAttempts: 3
 
+  flyway:
+    baselineOnMigrate: true
+    enabled: true
+    clean-on-validation-error: true
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: none
   datasource:
     hikari:
       connection-test-query: SELECT 1
@@ -84,17 +95,6 @@ spring:
     username: ${NAIS_DATABASE_SIF_INNSYN_API_SIF_INNSYN_DB_USERNAME}
     password: ${NAIS_DATABASE_SIF_INNSYN_API_SIF_INNSYN_DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
-    flyway:
-      baselineOnMigrate: true
-      enabled: false
-      clean-on-validation-error: true
-    jpa:
-      show-sql: true
-      properties:
-        hibernate:
-          dialect: org.hibernate.dialect.PostgreSQLDialect
-      hibernate:
-        ddl-auto: none
 
   kafka:
     #bootstrap-servers: # Settes i nais/<cluster>.json
