Skjuler sql queries i dev-gcp.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -27,7 +27,7 @@ spring:
         trust-store-password: ${javax.net.ssl.trustStorePassword}
 
   jpa:
-    show-sql: true
+    show-sql: false
     hibernate:
       ddl-auto: none
 
