--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -78,7 +78,7 @@ spring:
 
   flyway:
     baselineOnMigrate: true
-    enabled: true
+    enabled: false
     clean-on-validation-error: true
   jpa:
     show-sql: true
