Oppgraderer postgresql til versjon 11 idc.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,7 +112,7 @@ services:
 
   db:
     container_name: db
-    image: 'postgres'
+    image: 'postgres:11'
     networks:
       - app-tier
     restart: on-failure
