Første jobb for å konsumere midlertidig-alene og sende ut dittnav beskjed. Legger til topic OMP_MIDLERTIDIG_ALENE. Lager egen konsumer for midlertidig-alene. Legger inn info om topicen i application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,6 +59,13 @@ topic:
       bryter: true
       dry-run: false
 
+    # topic.listener.omp-midlertidig-alene
+    omp-midlertidig-alene:
+      id: omp-midlertidig-alene-listener
+      navn: privat-omsorgspenger-midlertidig-alene-cleanup
+      bryter: true
+      dry-run: false
+
 management:
   endpoints:
     web:
