Ditt NAV varsel for omsorgspenger-midlertidig-alene  (#16)
* Første jobb for å konsumere midlertidig-alene og sende ut dittnav beskjed.
Legger til topic OMP_MIDLERTIDIG_ALENE.
Lager egen konsumer for midlertidig-alene.
Legger inn info om topicen i application.yml
* Flytter K9Beskjed ut til dittNav mappe.
Lager egen OmsorgspengerMidlertidigAleneBeskjedProperties
* Update tekst omp-midlertidig-alene
* Flytter mockingen av sendBeskjed over kallet

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,10 @@ no.nav:
         tekst: 'Vi har mottatt søknaden din om pleiepenger.'
         link: https://sif-innsyn.dev.nav.no/familie/sykdom-i-familien/soknad/innsyn/dine-pleiepenger
         dagerSynlig: 7
+    omsorgspenger-midlertidig-alene:
+      beskjed:
+        tekst: 'Vi har mottatt omsorgspengesøknad fra deg om å bli regnet som alene om omsorgen for barn.'
+        dagerSynlig: 7
 
   apigw:
     apikey: ${APIGW_API_KEY} # kubectl secret som miljøvariabel i pod
@@ -56,6 +60,13 @@ topic:
     omp-utvidet-rett:
       id: omp-utvidet-rett-listener
       navn: privat-omsorgspengesoknad-cleanup
+      bryter: true
+      dry-run: false
+
+    # topic.listener.omp-midlertidig-alene
+    omp-midlertidig-alene:
+      id: omp-midlertidig-alene-listener
+      navn: privat-omsorgspenger-midlertidig-alene-cleanup
       bryter: true
       dry-run: false
 
