--- a/nais/alerterator.yml
+++ b/nais/alerterator.yml
@@ -13,7 +13,7 @@ spec:
   alerts:
     - alert: Applikasjon nede
       severity: danger
-      expr: up{app="{{app}}", job="kubernetes-pods-istio-secure"} == 0
+      expr: sum(up{app="{{app}}", job="kubernetes-pods-istio-secure"}) == 0
       for: 2m
       description: "App \{{ $labels.app }} er nede i namespace \{{ $labels.kubernetes_namespace }}"
       action: "`kubectl describe pod \{{ $labels.kubernetes_pod_name }} -n \{{ $labels.kubernetes_namespace }} -c \{{ $labels.app }}` for events, og `kubectl logs \{{ $labels.kubernetes_pod_name }} -n \{{ $labels.kubernetes_namespace }} -c \{{ $labels.app }}` for logger"
