Legger til appnavn på transaksjonid-prefix.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -114,7 +114,7 @@ spring:
       client-id: ${spring.application.name}
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
-      transaction-id-prefix: tx.
+      transaction-id-prefix: ${spring.application.name}.tx.
     consumer:
       enable-auto-commit: false
       group-id: ${spring.application.name}
