Legger til alert for å varsle om manglende meldinger.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/nais/alerterator.yml
+++ b/nais/alerterator.yml
@@ -55,6 +55,13 @@ spec:
       description: "Konsumering av melding i \{{ $labels.name }} feiler. Sjekk loggene for å finne ut hvorfor dette feiler."
       action: "`kubectl logs \{{ $labels.pod_name }} -n \{{ $labels.namespace }} -c \{{ $labels.app }}`"
 
+    - alert: Ingen konsumerte meldinger observert siste 48 timer.
+      severity: warning
+      expr: sum by (name) (ceil(increase(spring_kafka_listener_seconds_count{result="success", app="sif-innsyn-api"}[48h]))) < 1
+      for: 1m
+      description: "Ingen konsumerte meldinger i \{{ $labels.name } observert de siste 48 timer. Sjekk loggene for å finne ut hvorfor."
+      action: "`kubectl logs \{{ $labels.pod_name }} -n \{{ $labels.namespace }} -c \{{ $labels.app }}`"
+
     - alert: Helsesjekk feiler
       expr: floor(increase(http_server_requests_seconds_count{status!~"200", uri="/actuator/health", app="{{app}}"}[3m])) > 0
       severity: warning
