Fikser feil i alert.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -8,6 +8,7 @@ on:
       - 'LICENCE'
       - 'CODEOWNERS'
       - '.github/workflows/apply-alerts.yml'
+      - 'nais/alerterator.yml'
     branches:
 
 env:
