Separer logger for prod og dev.
Alarmen som skal trigges i prod skal ikke gjelde for dev.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -8,7 +8,7 @@ on:
       - 'LICENCE'
       - 'CODEOWNERS'
       - '.github/workflows/apply-alerts.yml'
-      - 'nais/alerterator.yml'
+      - 'nais/alerterator-*'
     branches:
 
 env:
