Fikser path for gjenkjenning av fil.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/.github/workflows/apply-alerts.yml
+++ b/.github/workflows/apply-alerts.yml
@@ -3,7 +3,7 @@ name: Alerts
 on:
   push:
     paths:
-      - 'nais/alerterator-dev.yml'
+      - 'nais/alerterator-*'
       - 'nais/dev-gcp.json'
       - 'nais/prod-gcp.json'
       - '.github/workflows/apply-alerts.yml'
