Håndterer kafka unauthorizedException (#18)
* Gjenforsøker authorizationException

Legger på en authorizationExceptionRetryInterval propery på container for å håndtere authorizationException.
Container uten denne propertien vil slå seg av ved slik authorizationException.

Har dessverre ikke fått til å replikere denne feilen lokalt eller via docker-compose. Satser på at dokumentasjonen er riktig.

* Legger til alert for å varsle om manglende meldinger.

* Separer alarmer for prod og dev.

Alarmen som skal trigges i prod skal ikke gjelde for dev.

* Toggler av omp-midler-tidig-alene i prod foreløpig.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/.github/workflows/apply-alerts.yml
+++ b/.github/workflows/apply-alerts.yml
@@ -3,7 +3,7 @@ name: Alerts
 on:
   push:
     paths:
-      - 'nais/alerterator.yml'
+      - 'nais/alerterator-*'
       - 'nais/dev-gcp.json'
       - 'nais/prod-gcp.json'
       - '.github/workflows/apply-alerts.yml'
@@ -22,7 +22,7 @@ jobs:
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
-          RESOURCE: nais/alerterator.yml
+          RESOURCE: nais/alerterator-dev.yml
           VARS: nais/dev-gcp.json
 
   deploy-prod-gcp:
@@ -35,5 +35,5 @@ jobs:
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-gcp
-          RESOURCE: nais/alerterator.yml
+          RESOURCE: nais/alerterator-prod.yml
           VARS: nais/prod-gcp.json
