Legger til task for å generere dependabot-kompatibel gradle-fil for versjonering.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,6 @@ updates:
     open-pull-requests-limit: 10
 
   - package-ecosystem: gradle
-    directory: "/"
+    directory: "/dependabot/"
     schedule:
       interval: daily
