--- a/dependabot/build.gradle
+++ b/dependabot/build.gradle
@@ -2,15 +2,12 @@
 dependencies {
     compile 'no.nav.security:token-validation-spring:1.1.5'
     compile 'org.springframework.retry:spring-retry:1.3.0'
-    compile 'io.springfox:springfox-swagger2:3.0.0'
-    compile 'io.springfox:springfox-swagger-ui:2.9.2'
+    compile 'io.springfox:springfox-boot-starter:3.0.0'
     compile 'net.logstash.logback:logstash-logback-encoder:6.5'
     compile 'com.vladmihalcea:hibernate-types-52:2.10.1'
-    compile 'org.apache.avro:avro:1.10.1'
-    compile 'io.confluent:kafka-connect-avro-converter:5.5.0'
-    compile 'io.confluent:kafka-avro-serializer:5.5.0'
     compile 'org.json:json:20201115'
     compile 'org.zalando:problem-spring-web-starter:0.26.2'
+    compile 'com.google.guava:guava:12.0'
     testCompile 'no.nav.security:token-validation-test-support:1.1.5'
     testCompile 'org.testcontainers:postgresql:1.15.0'
     testCompile 'org.scala-lang:scala-library:2.12.11'
@@ -20,13 +17,10 @@ dependencies {
     testCompile 'io.mockk:mockk:1.10.3-jdk8'
     testCompile 'no.nav.security:token-validation-spring:1.1.5'
     testCompile 'org.springframework.retry:spring-retry:1.3.0'
-    testCompile 'io.springfox:springfox-swagger2:2.9.2'
-    testCompile 'io.springfox:springfox-swagger-ui:2.9.2'
-    testCompile 'net.logstash.logback:logstash-logback-encoder:6.3'
-    testCompile 'com.vladmihalcea:hibernate-types-52:2.3.4'
-    testCompile 'org.apache.avro:avro:1.9.2'
-    testCompile 'io.confluent:kafka-connect-avro-converter:5.5.0'
-    testCompile 'io.confluent:kafka-avro-serializer:5.5.0'
-    testCompile 'org.json:json:20200518'
+    testCompile 'io.springfox:springfox-boot-starter:3.0.0'
+    testCompile 'net.logstash.logback:logstash-logback-encoder:6.5'
+    testCompile 'com.vladmihalcea:hibernate-types-52:2.10.1'
+    testCompile 'org.json:json:20201115'
     testCompile 'org.zalando:problem-spring-web-starter:0.26.2'
+    testCompile 'com.google.guava:guava:12.0'
 }
